--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
     <artifactId>spire.pdf</artifactId>
     <version>10.7.3</version>
 </dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+    <scope>provided</scope>
+</dependency>
+
 
     
     	
